--- a/css/styles.css
+++ b/css/styles.css
@@ -81,9 +81,17 @@ p {
   background-position: bottom 0 right 0;
   background-size: cover;
 
-  max-width: 425px;
+  max-width: 430px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .header {
+    background-image: url(../images/header-author-image-mobile-2x.png);
+  }
 }
 
 .header-container {
@@ -175,7 +183,12 @@ p {
   left: 0;
 
   padding: 8px 30px;
+
+  max-width: 430px;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+
   background: rgba(16, 125, 97, 0.5);
 }
 
