--- a/css/styles.css
+++ b/css/styles.css
@@ -157,10 +157,13 @@ p {
   padding: 15px;
 
   max-width: 320px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 
   margin-bottom: 9px;
+
+  border: none;
 
   animation: glowing-one 1300ms infinite;
 }
@@ -735,9 +738,11 @@ p {
   padding: 15px;
 
   max-width: 320px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 
+  border: none;
   border-radius: 100px;
   background: #107d61;
 
@@ -1066,8 +1071,11 @@ p {
   padding: 15px;
 
   max-width: 320px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
+
+  border: none;
 
   animation: glowing-two 1300ms infinite;
 }
@@ -1173,8 +1181,11 @@ p {
   padding: 15px;
 
   max-width: 320px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
+
+  border: none;
 
   animation: glowing-one 1300ms infinite;
 }
@@ -1447,4 +1458,71 @@ p {
   font-style: normal;
   font-weight: 300;
   line-height: normal;
+}
+
+/* modal */
+
+body.show-modal .backdrop {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+}
+
+body.show-modal .modal {
+  transform: scale(1);
+}
+
+.backdrop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 998;
+
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
+
+  padding: 30px;
+}
+
+.modal {
+  position: relative;
+  padding: 78px 15px 78px 15px;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 520px;
+  min-height: 308px;
+  background-color: #fff;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+
+  transform: scale(1.1);
+  transition: transform 200ms ease-in-out;
+}
+
+.modal-title {
+  color: #171717;
+  text-align: center;
+  font-family: Futura PT;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%; /* 18px */
+
+  margin-bottom: 20px;
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  background: none;
+  border: none;
 }
