--- a/css/styles.css
+++ b/css/styles.css
@@ -327,6 +327,34 @@ p {
   text-transform: uppercase;
 }
 
+.price-today {
+  position: absolute;
+  bottom: 161px;
+  left: -22px;
+
+  z-index: 999;
+
+  color: #fff;
+  font-family: Futura PT;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 13px */
+  text-transform: uppercase;
+
+  max-width: 189px;
+}
+
+.price-today span {
+  color: #fff;
+  font-family: Futura PT;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+  text-transform: uppercase;
+}
+
 /* section-one */
 
 .section-one {
